--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fit-generator-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT api_service:app
+    startCommand: gunicorn -c gunicorn.conf.py api_service:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
