--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: fit-generator-api
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT --timeout 120 --workers 1 api_service:app
+    env: docker
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.18
+      - key: PORT
+        value: 10000
