--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,21 @@
 services:
   - type: web
     name: fit-generator-api
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    buildCommand: |
+      sudo apt-get update
+      sudo apt-get install -y openjdk-11-jre-headless
+      sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 1
+      sudo update-alternatives --set java /usr/lib/jvm/java-11-openjdk-amd64/bin/java
+      java -version
+      pip install -r requirements.txt
+    startCommand: |
+      export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+      export PATH=$JAVA_HOME/bin:$PATH
+      java -version
+      gunicorn --bind 0.0.0.0:$PORT --timeout 120 --workers 1 api_service:app
     envVars:
-      - key: PORT
-        value: 10000
+      - key: PYTHON_VERSION
+        value: 3.9.18
+      - key: JAVA_HOME
+        value: /usr/lib/jvm/java-11-openjdk-amd64
